external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_or_binding_3.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03010]: unbound field
   ┌─ tests/move_2024/matching/invalid_or_binding_3.move:10:22
   │
10 │         E::X { x } | E::Y { y: _, x } => *x
   │                      ^^^^^^^^^^^^^^^^ Unbound field 'x' in '0x42::m::E::Y'
